New configuration option: ENABLE_PASSWORD.

--- a/protherm/protherm.cfg
+++ b/protherm/protherm.cfg
@@ -41,3 +41,6 @@ LOG_TO_FILE  = False
 
 # Use Celsius or Fahrenheit (C or F).
 DEGREES_UNIT = C
+
+# Password for TCP socket; this is secret, protect this file!
+ENABLE_PASSWORD = choChe4i
