Added TEMP_HYSTERESIS to configuration options.

--- a/protherm/protherm.cfg
+++ b/protherm/protherm.cfg
@@ -15,7 +15,7 @@ LCD_SPI_DEVICE = 0
 BUTTON1_GPIO = 18
 BUTTON1_ENABLED = True
 # Button connects the GPIO to 3.3 v (active high) or to ground.
-BUTTON1_ACTIVE_HIGH = True
+BUTTON1_ACTIVE_HIGH = False
 
 # GPIO connected to switch relays.
 SWITCH1_GPIO = 17
@@ -29,9 +29,6 @@ WIFI_IFACE = wlan0
 # Link quality reported by iwconfig, usually is 100-based.
 WIFI_QUALITY_SCALE = 100
 
-# Default temperature, if no program is defined.
-DEFAULT_TEMPERATURE = 10.0
-
 # From logging module: NOTSET, DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL = INFO
 
@@ -41,6 +38,12 @@ LOG_TO_FILE  = False
 
 # Use Celsius or Fahrenheit (C or F).
 DEGREES_UNIT = C
+
+# Default temperature, if no program is defined.
+DEFAULT_TEMPERATURE = 10.0
+
+# Programmed temperature hysteresis for changing switch state.
+TEMP_HYSTERESIS = 0.2
 
 # Password for TCP socket; this is secret, protect this file!
 ENABLE_PASSWORD = choChe4i
