Fixed systemd units and Makefile

--- a/protherm-tbot/Makefile
+++ b/protherm-tbot/Makefile
@@ -19,8 +19,14 @@ install-config:
 	install -m 755 -o root -g root -D rc-script.sh /etc/init.d/$(TARGET)
 	install -m 640 -o root -g root -D $(CFGFILE) /etc/$(CFGFILE)
 
+.PHONY: install-systemd
+install-systemd:
+	install -m 644 -o root -g root -D systemd-unit /etc/systemd/system/$(TARGET).service
+	systemctl daemon-reload
+
 .PHONY: uninstall
 uninstall:
 	-rm $(SBINDIR)/$(TARGET)
 	-rm /etc/init.d/$(TARGET)
+	-rm /etc/systemd/system/$(TARGET).service
 	-rm /etc/$(CFGFILE)
