Refactoring: Python 3 and new Python library for the PCD8544 display

--- a/protherm/protherm.cfg
+++ b/protherm/protherm.cfg
@@ -36,6 +36,13 @@ LOG_LEVEL = INFO
 LOG_TO_FILE  = False
 #LOG_TO_FILE = /var/log/protherm.log
 
+# Log format suitable for systemd and journalctl.
+LOG_FORMAT = %(levelname)s %(message)s
+## Log format suitable for syslog (include program name).
+#LOG_FORMAT = %(module)s: %(levelname)s %(message)s
+## Log format suitable for file or stdout (include timestamp).
+#LOG_FORMAT = %(asctime)s %(levelname)s %(message)s
+
 # Use Celsius or Fahrenheit (C or F).
 DEGREES_UNIT = C
 
@@ -45,5 +52,5 @@ DEFAULT_TEMPERATURE = 10.0
 # Programmed temperature hysteresis for changing switch state.
 TEMP_HYSTERESIS = 0.2
 
-# Password for TCP socket; this is secret, protect this file!
-ENABLE_PASSWORD = choChe4i
+# Use the old Adafruit_Nokia_LCD instead of adafruit_pcd8544.
+OLD_LCD_LIBRARY = True
